# agent-commons

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SUPPORT.md  pyproject.toml
.agent-commons/: ONBOARDING.md  workspace.yaml
.agents/skills/commons-delegate/: SKILL.md
.agents/skills/commons-handoff/: SKILL.md
.agents/skills/commons-start/: SKILL.md
.claude/skills/commons-coordinate/: SKILL.md
.claude/skills/commons-record/: SKILL.md
.claude/skills/commons-review/: SKILL.md
.github/workflows/: ci.yml
benchmarks/: benchmark_projection.py
docs/: ARCHITECTURE.md  BROKER_OPERATIONS.md  COUNCIL_SYNTHESIS.md  PROTOCOL.md  QUICKSTART.md  ROADMAP.md  THREAT_MODEL.md  TROUBLESHOOTING.md  USER_WORKFLOWS.md  VISION.md
docs/adr/: 0001-file-ledger-with-sqlite-projection.md  0002-explicit-truth-promotion.md  0003-ledger-derived-checkout-aware-receipt-recovery.md  0004-optional-local-delegation-runtime.md
docs/tutorials/: CODEX_CLAUDE_SNAKE.md
src/agent_commons/: __init__.py  cli.py  config.py  errors.py  platform_support.py  views.py
src/agent_commons/coordination/: __init__.py  claims.py  sessions.py
src/agent_commons/core/: __init__.py  canonical.py  ids.py  refs.py  schema_registry.py
src/agent_commons/domain/: __init__.py  invalidations.py  lifecycle.py  projection.py  revisions.py  validation.py
src/agent_commons/index/: __init__.py  sqlite.py
src/agent_commons/integrations/: __init__.py  installer.py
src/agent_commons/mcp/: __init__.py  server.py
src/agent_commons/resources/: __init__.py
src/agent_commons/runtime/: __init__.py  attempts.py  broker.py  diagnostics.py  exec_gate.py  model.py  policy.py  preflight.py  source_contract.py  subprocess_runner.py  telemetry.py  tool_audit.py
src/agent_commons/security/: __init__.py  policy.py
src/agent_commons/services/: __init__.py  delegation_runtime.py  manager.py  provider_canary.py
src/agent_commons/storage/: __init__.py  atomic.py  events.py  idempotency.py  manifests.py  receipt_recovery.py
tests/: test_platform_support.py
tests/cli/: test_broker_cli.py  test_cli.py  test_delegation_cli.py  test_read_only_cli.py
tests/contract/: test_h2_checkout_recovery_contract.py
tests/coordination/: test_claims.py  test_sessions.py
tests/core/: helpers.py  test_canonical_ids_refs.py  test_config.py  test_storage.py
tests/domain/: test_delegation.py  test_projection.py  test_validation_lifecycle.py  test_views.py
tests/e2e/: test_two_agents.py
tests/fixtures/: fake_claude_mcp_provider.py  fake_codex_mcp_provider.py
tests/index/: __init__.py  helpers.py  test_sqlite.py
tests/integrations/: test_installer.py
tests/mcp/: test_server.py  test_stdio_preflight.py  test_worker_scope.py
tests/runtime/: test_attempts.py  test_orchestration.py  test_orchestration_security.py  test_preflight.py  test_profiles_policy.py  test_provider_canary.py  test_real_stdio_contract.py  test_subprocess_runner.py  test_telemetry_broker.py  test_tool_audit.py
tests/schemas/: test_delegation_schema.py  test_universal_contracts.py
tests/security/: test_delegation_security.py  test_policy.py
tests/services/: test_delegation_manager.py  test_manager.py
(+33 files in other folders)
