[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-commons"
version = "0.1.0"
description = "A Git-friendly shared manager-space for heterogeneous coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "jsonschema>=4.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "pyflakes>=3.2",
]

[project.scripts]
agent-commons = "agent_commons.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_commons = [
  "resources/schemas/**/*.json",
  "resources/skills/**/*",
  "resources/templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
